Add user role functionality
